# sedlex

./: .gitattributes  .gitignore  .merlin  .ocamlformat  .ocamlformat-ignore  .travis.yml  CHANGES  CHANGES.md  HACKING.md  LICENSE  META  Makefile  README  README.md  cduce_lexer.ml  cset.ml  dune-project  index.html  mk_pa_ulex.ml  opam  pa_ulex.ml  pa_ulex.ml.new  pa_ulex.ml.src  pa_ulex.mllib  sedlex.opam  sedlex.opam.template  sedlex_menhir.opam  sedlexing.mli  test.ml  ulex.ml  ulex.mli  ulexing.ml  ulexing.mli  ulexing.mllib  utf16.ml  utf16.mli  utf8.ml  utf8.mli
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  doc.yml
emacs/: sedlex-dot.el
examples/: Makefile  complement.ml  dune  jbuild  json.ml  misc.ml  number_lexer.gen.ml  number_lexer.ml  performance.ml  regressions.ml  repeat.ml  subtraction.ml  tokenizer.ml  unicode_old.ml
examples/with_menhir/: dune  lexer.ml  main.ml  parser.mly
examples/with_ocamlyacc/: dune  lexer.ml  main.ml  parser.mly
opam/: sedlex.opam  sedlex.opam.template
sedlex/: index.html
sedlex/Sedlex_compiler/: index.html
sedlex/Sedlex_compiler/Cset/: index.html
sedlex/Sedlex_compiler/Ir/: index.html
sedlex/Sedlex_compiler/Sedlex/: index.html
sedlex/Sedlex_ppx/: index.html
sedlex/Sedlex_ppx/Iso/: index.html
sedlex/Sedlex_ppx/Ppx_sedlex/: index.html
sedlex/Sedlex_ppx/Ppx_sedlex/StringMap/: index.html
sedlex/Sedlex_ppx/Sedlex/: index.html
sedlex/Sedlex_ppx/Sedlex_cset/: index.html
sedlex/Sedlex_ppx/Unicode/: index.html
sedlex/Sedlex_ppx/Unicode/Categories/: index.html
sedlex/Sedlex_ppx/Unicode/Properties/: index.html
sedlex/Sedlex_ppx/Unicode63/: index.html
sedlex/Sedlex_ppx/Unicode63/Categories/: index.html
sedlex/Sedlex_ppx/Unicode63/Properties/: index.html
sedlex/Sedlex_ppx/Utf8/: index.html
sedlex/Sedlex_ppx/Xml/: index.html
sedlex/Sedlex_ppx__Ppx_sedlex/: index.html
sedlex/Sedlex_ppx__Ppx_sedlex/StringMap/: index.html
sedlex/Sedlex_ppx__Sedlex/: index.html
sedlex/Sedlex_ppx__Sedlex_cset/: index.html
sedlex/Sedlex_ppx__Unicode63/: index.html
sedlex/Sedlex_ppx__Unicode63/Categories/: index.html
sedlex/Sedlex_ppx__Unicode63/Properties/: index.html
sedlex/Sedlex_utils/: index.html
sedlex/Sedlex_utils/Cset/: index.html
sedlex/Sedlexing/: index.html
sedlex/Sedlexing/Latin1/: index.html
sedlex/Sedlexing/Utf16/: index.html
sedlex/Sedlexing/Utf8/: index.html
sedlex/Sedlexing/Utf8/Helper/: index.html
src/common/: cset.ml  cset.mli  dune
src/compiler/: cset.ml  cset.mli  dune  ir.ml  ir.mli  sedlex.ml  sedlex.mli
src/generator/: README.md  dune  gen_unicode.ml  gen_unicode.ml.inc  gen_unicode.mli
src/generator/data/: README  base_url  dune
src/lib/: Makefile  dune  jbuild  sedlexing.ml  sedlexing.mli  sedlexing_menhir.ml  sedlexing_menhir.mli  utf16.mli  utf8.ml  utf8.mli
src/lib/internal/: dune  sedlexing_internal.ml
src/syntax/: Makefile  cset.ml  cset.mli  dune  iso.ml  iso.mli  jbuild  ppx_sedlex.ml  ppx_sedlex.mli  sedlex.ml  sedlex.mli  sedlex_cset.ml  sedlex_cset.mli  sedlex_ppx.ml  unicode.ml  unicode.mli  utf8.ml  utf8.mli  xml.ml  xml.mli
test/: basic.ml  dune  misc.ml  nested.ml  number_lexer.ml  stress_test.ml  test_oracle.ml  utf8.ml
test/codegen/: dune  render_dots.sh  test_errors.ml  test_gen.ml  test_realistic.ml
test/ocamllex_oracle/: dune  ocamllex_oracle.ml
test/ocamllex_vendored/: README.md  dune  sync.sh
test/oracle/: dune  sedlex_oracle.ml  sedlex_oracle.mli
test/ppx_test/: dune  ppx_sedlex_test.ml
tests/: complement.ml
