opam-version: "1.2"
name: "sedlex"
version: "1.99.4"
maintainer: "Alain Frisch <alain.frisch@lexifi.com>"
authors: [
  "Alain Frisch <alain.frisch@lexifi.com>"
]

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-doc: ["jbuilder" "build" "@doc" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: ["jbuilder" {build}
          "ppx_tools_versioned"
          "ocaml-migrate-parsetree"
          "gen"
         ]
available: [ ocaml-version >= "4.02.3" ]
homepage: "https://github.com/alainfrisch/sedlex"
bug-reports: "https://github.com/alainfrisch/sedlex/issues"
license: "MIT"
dev-repo: "https://github.com/alainfrisch/sedlex.git"
