opam-version: "2.0"
name: "sedlex"
synopsis: "An OCaml lexer generator for Unicode"
description: "
sedlex is a lexer generator for OCaml, similar to ocamllex, but supporting Unicode. Contrary to ocamllex, lexer specifications for sedlex are embedded in regular OCaml source files.
"
version: "2.0"
license: "MIT"
maintainer: "Alain Frisch <alain.frisch@lexifi.com>"
authors: [
  "Alain Frisch <alain.frisch@lexifi.com>"
  "https://github.com/ocaml-community/sedlex/graphs/contributors"
]
homepage: "https://github.com/ocaml-community/sedlex"
dev-repo: "git+https://github.com/ocaml-community/sedlex.git"
bug-reports: "https://github.com/ocaml-community/sedlex/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {build & >= "4.02.3"}
  "dune" {build & >= "1.0"}
  "ppx_tools_versioned"
  "ocaml-migrate-parsetree"
  "gen"
  "uchar"
]
