(library
 (name sedlex_ppx)
 (public_name sedlex.ppx)
 (kind ppx_rewriter)
 (libraries ppxlib sedlex)
 (ppx_runtime_libraries sedlex)
 (preprocess
  (pps ppxlib.metaquot))
 (flags
  (:standard -w -9)))

(rule
 (targets unicode.ml)
 (mode promote-until-clean)
 (deps
  (:gen ../generator/gen_unicode.exe)
  ../generator/data/DerivedCoreProperties.txt
  ../generator/data/DerivedGeneralCategory.txt
  ../generator/data/PropList.txt)
 (action
  (run %{gen} %{targets})))
