(rule
  (targets DerivedCoreProperties.txt)
  (deps    base_url)
  (action  (run curl -L -s %{read:base_url}/ucd/DerivedCoreProperties.txt -o DerivedCoreProperties.txt)))

(rule
  (targets DerivedGeneralCategory.txt)
  (deps    base_url)
  (action  (run curl -L -s %{read:base_url}/ucd/extracted/DerivedGeneralCategory.txt -o DerivedGeneralCategory.txt)))

(rule
  (targets PropList.txt)
  (deps    base_url)
  (action  (run curl -L -s %{read:base_url}/ucd/PropList.txt -o PropList.txt)))
